--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laravel/reverb": "^1.0",
         "laravel/sanctum": "^4.2",
         "laravel/wayfinder": "^0.1.9",
+        "pusher/pusher-php-server": "^7.2.7",
         "smorken/domain": "^v1.10.0"
     },
     "require-dev": {
