--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
         "dev": "vite",
         "format": "prettier --write resources/",
         "format:check": "prettier --check resources/",
-        "lint": "eslint . --fix"
+        "lint": "eslint . --fix",
+        "test": "vitest"
     },
     "devDependencies": {
         "@eslint/js": "^9.19.0",
@@ -30,6 +31,7 @@
         "typescript-eslint": "^8.23.0",
         "vite": "^7.1.5",
         "vite-plugin-vue-devtools": "^8.0.2",
+        "vitest": "^3.2.4",
         "vue-tsc": "^2.2.4"
     },
     "dependencies": {
